@@ -16,9 +16,12 @@ package io.aklivity.zilla.runtime.binding.asyncapi.internal.config;
 
 import static com.fasterxml.jackson.dataformat.yaml.YAMLGenerator.Feature.MINIMIZE_QUOTES;
 import static com.fasterxml.jackson.dataformat.yaml.YAMLGenerator.Feature.WRITE_DOC_START_MARKER;
+import static io.aklivity.zilla.runtime.common.feature.FeatureFilter.featureEnabled;
 import static java.util.stream.Collectors.toList;
 import static org.agrona.LangUtil.rethrowUnchecked;
 
+import java.io.StringReader;
+import java.io.StringWriter;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
@@ -27,6 +30,10 @@ import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
+import jakarta.json.Json;
+import jakarta.json.JsonObject;
+import jakarta.json.JsonReader;
+import jakarta.json.JsonWriter;
 import jakarta.json.bind.Jsonb;
 import jakarta.json.bind.JsonbBuilder;
 
@@ -40,7 +47,7 @@ import com.fasterxml.jackson.dataformat.yaml.YAMLMapper;
 import io.aklivity.zilla.runtime.binding.asyncapi.config.AsyncapiOptionsConfig;
 import io.aklivity.zilla.runtime.binding.asyncapi.config.AsyncapiServerConfig;
 import io.aklivity.zilla.runtime.binding.asyncapi.internal.model.Asyncapi;
-import io.aklivity.zilla.runtime.binding.asyncapi.internal.model.AsyncapiSchema;
+import io.aklivity.zilla.runtime.binding.asyncapi.internal.model.AsyncapiSchemaItem;
 import io.aklivity.zilla.runtime.binding.asyncapi.internal.model.AsyncapiServer;
 import io.aklivity.zilla.runtime.binding.asyncapi.internal.model.AsyncapiTrait;
 import io.aklivity.zilla.runtime.binding.asyncapi.internal.view.AsyncapiSchemaView;
@@ -59,24 +66,30 @@ public abstract class AsyncapiNamespaceGenerator
     protected static final String INLINE_CATALOG_NAME = "catalog0";
     protected static final String INLINE_CATALOG_TYPE = "inline";
     protected static final String VERSION_LATEST = "latest";
-    protected static final String APPLICATION_JSON = "application/json";
     protected static final AsyncapiOptionsConfig EMPTY_OPTION =
         new AsyncapiOptionsConfig(null, null, null, null, null, null, null);
     protected static final Pattern VARIABLE = Pattern.compile("\\{([^}]*.?)\\}");
     protected final Matcher variable = VARIABLE.matcher("");
 
-    protected Asyncapi asyncapi;
     protected Map<String, Asyncapi> asyncapis;
     protected boolean isTlsEnabled;
-    protected AsyncapiProtocol protocol;
     protected String qname;
     protected String namespace;
     protected String qvault;
     protected String vault;
 
+    public void init(
+        BindingConfig binding)
+    {
+        this.qname = binding.qname;
+        this.namespace = binding.namespace;
+        this.qvault = binding.qvault;
+        this.vault = binding.vault;
+    }
+
     public NamespaceConfig generate(
         BindingConfig binding,
-        Asyncapi asyncapi)
+        AsyncapiNamespaceConfig namespaceConfig)
     {
         return null;
     }
@@ -84,7 +97,8 @@ public abstract class AsyncapiNamespaceGenerator
     public NamespaceConfig generateProxy(
         BindingConfig binding,
         Map<String, Asyncapi> asyncapis,
-        ToLongFunction<String> resolveApiId)
+        ToLongFunction<String> resolveApiId,
+        List<String> labels)
     {
         return null;
     }
@@ -92,9 +106,10 @@ public abstract class AsyncapiNamespaceGenerator
     protected AsyncapiProtocol resolveProtocol(
         String protocolName,
         AsyncapiOptionsConfig options,
+        List<Asyncapi> asyncapis,
         List<AsyncapiServerView> servers)
     {
-        Pattern pattern = Pattern.compile("(http|mqtt|kafka)");
+        Pattern pattern = Pattern.compile("(http|sse|mqtt|kafka)");
         Matcher matcher = pattern.matcher(protocolName);
         AsyncapiProtocol protocol = null;
         if (matcher.find())
@@ -102,14 +117,22 @@ public abstract class AsyncapiNamespaceGenerator
             switch (matcher.group())
             {
             case "http":
-                protocol = new AsyncapiHttpProtocol(qname, asyncapi, options, protocolName);
+                protocol = new AsyncapiHttpProtocol(qname, asyncapis, options, protocolName);
+                break;
+            case "sse":
+            case "secure-sse":
+                if (featureEnabled(AsyncapiSseProtocol.class))
+                {
+                    final boolean httpServerAvailable = servers.stream().anyMatch(s -> "http".equals(s.protocol()));
+                    protocol = new AsyncapiSseProtocol(qname, httpServerAvailable, asyncapis, options, protocolName);
+                }
                 break;
             case "mqtt":
-                protocol = new AsyncapiMqttProtocol(qname, asyncapi, options, protocolName, namespace);
+                protocol = new AsyncapiMqttProtocol(qname, asyncapis, options, protocolName, namespace);
                 break;
             case "kafka":
             case "kafka-secure":
-                protocol = new AyncapiKafkaProtocol(qname, asyncapi, servers, options, protocolName);
+                protocol = new AyncapiKafkaProtocol(qname, asyncapis, servers, options, protocolName);
                 break;
             }
         }
@@ -121,9 +144,10 @@ public abstract class AsyncapiNamespaceGenerator
     }
 
     protected List<AsyncapiServerView> filterAsyncapiServers(
-        Map<String, AsyncapiServer> servers,
+        Asyncapi asyncapi,
         List<AsyncapiServerConfig> serverConfigs)
     {
+        final Map<String, AsyncapiServer> servers = asyncapi.servers;
         List<AsyncapiServerView> filtered;
         Map<String, AsyncapiServerView> serverViews = servers.entrySet().stream().collect(Collectors.toMap(
             Map.Entry::getKey, e -> AsyncapiServerView.of(e.getValue(), asyncapi.components.serverVariables)));
@@ -140,7 +164,7 @@ public abstract class AsyncapiNamespaceGenerator
                                 server.urlMatcher.reset(sc.url).matches() &&
                                 server.pathnameMatcher.reset(sc.pathname).matches();
                         })
-                    .collect(Collectors.toList())));
+                    .toList()));
         }
         else
         {
@@ -176,11 +200,27 @@ public abstract class AsyncapiNamespaceGenerator
         return ports;
     }
 
+    public int[] resolvePortForServer(
+        AsyncapiServerView server,
+        boolean secure)
+    {
+        int[] ports = {};
+
+        if (server.getAsyncapiProtocol().isSecure() == secure)
+        {
+            ports = new int[] { server.getPort() };
+        }
+
+        return ports;
+    }
+
     protected <C> NamespaceConfigBuilder<C> injectCatalog(
         NamespaceConfigBuilder<C> namespace,
-        Asyncapi asyncapi)
+        List<Asyncapi> asyncapis)
     {
-        if (asyncapi.components != null && asyncapi.components.schemas != null && !asyncapi.components.schemas.isEmpty())
+        final boolean injectCatalog = asyncapis.stream()
+            .anyMatch(a -> a.components != null && a.components.schemas != null && !a.components.schemas.isEmpty());
+        if (injectCatalog)
         {
             namespace
                 .catalog()
@@ -188,7 +228,7 @@ public abstract class AsyncapiNamespaceGenerator
                     .type(INLINE_CATALOG_TYPE)
                     .options(InlineOptionsConfig::builder)
                         .subjects()
-                            .inject(this::injectSubjects)
+                            .inject(s -> injectSubjects(s, asyncapis))
                             .build()
                         .build()
                     .build();
@@ -197,40 +237,47 @@ public abstract class AsyncapiNamespaceGenerator
     }
 
     protected <C> InlineSchemaConfigBuilder<C> injectSubjects(
-        InlineSchemaConfigBuilder<C> subjects)
+        InlineSchemaConfigBuilder<C> subjects,
+        List<Asyncapi> asyncapis)
     {
-        try (Jsonb jsonb = JsonbBuilder.create())
+        for (Asyncapi asyncapi : asyncapis)
         {
-            YAMLMapper yaml = YAMLMapper.builder()
-                .disable(WRITE_DOC_START_MARKER)
-                .enable(MINIMIZE_QUOTES)
-                .build();
-            for (Map.Entry<String, AsyncapiSchema> entry : asyncapi.components.schemas.entrySet())
+            if (asyncapi.components != null && asyncapi.components.schemas != null && !asyncapi.components.schemas.isEmpty())
             {
-                AsyncapiSchemaView schema = AsyncapiSchemaView.of(asyncapi.components.schemas, entry.getValue());
-
-                subjects
-                    .subject(entry.getKey())
-                    .version(VERSION_LATEST)
-                    .schema(writeSchemaYaml(jsonb, yaml, schema))
-                    .build();
-            }
-            if (asyncapi.components.messageTraits != null)
-            {
-                for (Map.Entry<String, AsyncapiTrait> entry : asyncapi.components.messageTraits.entrySet())
+                try (Jsonb jsonb = JsonbBuilder.create())
                 {
-                    entry.getValue().headers.properties.forEach((k, v) ->
+                    YAMLMapper yaml = YAMLMapper.builder()
+                        .disable(WRITE_DOC_START_MARKER)
+                        .enable(MINIMIZE_QUOTES)
+                        .build();
+                    for (Map.Entry<String, AsyncapiSchemaItem> entry : asyncapi.components.schemas.entrySet())
+                    {
+                        AsyncapiSchemaView schema = AsyncapiSchemaView.of(asyncapi.components.schemas, entry.getValue());
+
                         subjects
-                            .subject(k)
+                            .subject(entry.getKey())
                             .version(VERSION_LATEST)
-                            .schema(writeSchemaYaml(jsonb, yaml, v))
-                            .build());
+                            .schema(writeSchemaYaml(jsonb, yaml, schema))
+                            .build();
+                    }
+                    if (asyncapi.components.messageTraits != null)
+                    {
+                        for (Map.Entry<String, AsyncapiTrait> entry : asyncapi.components.messageTraits.entrySet())
+                        {
+                            entry.getValue().headers.properties.forEach((k, v) ->
+                                subjects
+                                    .subject(k)
+                                    .version(VERSION_LATEST)
+                                    .schema(writeSchemaYaml(jsonb, yaml, v))
+                                    .build());
+                        }
+                    }
+                }
+                catch (Exception ex)
+                {
+                    rethrowUnchecked(ex);
                 }
             }
-        }
-        catch (Exception ex)
-        {
-            rethrowUnchecked(ex);
         }
         return subjects;
     }
@@ -244,6 +291,22 @@ public abstract class AsyncapiNamespaceGenerator
         try
         {
             String schemaJson = jsonb.toJson(schema);
+
+            JsonReader reader = Json.createReader(new StringReader(schemaJson));
+            JsonObject jsonObject = reader.readObject();
+
+            JsonObject modifiedJsonObject = jsonObject.getJsonObject("schema");
+
+            if (modifiedJsonObject != null)
+            {
+                StringWriter stringWriter = new StringWriter();
+                JsonWriter jsonWriter = Json.createWriter(stringWriter);
+                jsonWriter.writeObject(modifiedJsonObject);
+                jsonWriter.close();
+
+                schemaJson = stringWriter.toString();
+            }
+
             JsonNode json = new ObjectMapper().readTree(schemaJson);
             result = yaml.writeValueAsString(json);
         }
@@ -256,12 +319,11 @@ public abstract class AsyncapiNamespaceGenerator
 
     protected  <C> BindingConfigBuilder<C> injectMetrics(
         BindingConfigBuilder<C> binding,
-        List<MetricRefConfig> metricRefs,
-        String protocol)
+        List<MetricRefConfig> metricRefs)
     {
         List<MetricRefConfig> metrics = metricRefs.stream()
             .filter(m -> m.name.startsWith("stream."))
-            .collect(toList());
+            .toList();
 
         if (!metrics.isEmpty())
         {
